# dmppl

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
dmppl/: __init__.py  base.py  bytePipe.py  color.py  curses.py  fx.py  identicon.py  math.py  nd.py  prng.py  stats.py  test.py  toml.py  vcd.py  yaml.py
dmppl/experiments/: eva.py  relest.py  relest_learn.py  tstTf.py
dmppl/experiments/colorspace/: colorspace.py
dmppl/experiments/correlator/: correlator.py  correlator_common.py  correlator_record.py  correlator_tui.py
dmppl/experiments/eva/: .gitignore  dmppl  eva.py  eva_common.py  eva_html.py  eva_html_table.py  eva_httpd.py  eva_init.py  eva_svg_netgraph.py
dmppl/experiments/eva/share/: configDefault.toml  eva.css  eva.js
dmppl/experiments/eva/tst/: basic0.evc  basic1.evc  basic2.evc  basic2.measure.golden.vcd  basic2.signals.golden.vcd  basic2.vcd  bstate.foo0  bstate.foo1  praxi.evc  praxi_7k.vcd  probsys0_7k.evc  tinn.evc  tinn.vcd
dmppl/experiments/relest/: .gitignore  plotLoss.py  relest.py  relest_learn.py
dmppl/experiments/relest/tensorboardCSV/: run-tf_fullAssist_2qsig_0_sigm_train-tag-epoch_loss.csv  run-tf_fullAssist_2qsig_2qsig_sigm_train-tag-epoch_loss.csv  run-tf_fullAssist_4qsig_4qsig_sigm_train-tag-epoch_loss.csv  run-tf_fullAssist_4sigm_4sigm_sigm_train-tag-epoch_loss.csv  run-tf_fullAssist_4tanh_4tanh_sigm_train-tag-epoch_loss.csv  run-tf_fullAssist_8qsig_8qsig_sigm_train-tag-epoch_loss.csv  run-tf_fullAssist_8relu_8relu_sigm_train-tag-epoch_loss.csv  run-tf_fullAssist_8sigm_8sigm_sigm_train-tag-epoch_loss.csv  run-tf_fullAssist_8tanh_8tanh_sigm_train-tag-epoch_loss.csv  run-tf_perfCntrs_2qsig_0_sigm_train-tag-epoch_loss.csv  run-tf_perfCntrs_2qsig_2qsig_sigm_train-tag-epoch_loss.csv  run-tf_perfCntrs_4qsig_4qsig_sigm_train-tag-epoch_loss.csv  run-tf_perfCntrs_4sigm_4sigm_sigm_train-tag-epoch_loss.csv  run-tf_perfCntrs_4tanh_4tanh_sigm_train-tag-epoch_loss.csv  run-tf_perfCntrs_8qsig_8qsig_sigm_train-tag-epoch_loss.csv  run-tf_perfCntrs_8relu_8relu_sigm_train-tag-epoch_loss.csv  run-tf_perfCntrs_8sigm_8sigm_sigm_train-tag-epoch_loss.csv  run-tf_perfCntrs_8tanh_8tanh_sigm_train-tag-epoch_loss.csv  run-tf_withAssist_2qsig_0_sigm_train-tag-epoch_loss.csv  run-tf_withAssist_2qsig_2qsig_sigm_train-tag-epoch_loss.csv  run-tf_withAssist_4qsig_4qsig_sigm_train-tag-epoch_loss.csv  run-tf_withAssist_4sigm_4sigm_sigm_train-tag-epoch_loss.csv  run-tf_withAssist_4tanh_4tanh_sigm_train-tag-epoch_loss.csv  run-tf_withAssist_8qsig_8qsig_sigm_train-tag-epoch_loss.csv  run-tf_withAssist_8relu_8relu_sigm_train-tag-epoch_loss.csv  run-tf_withAssist_8sigm_8sigm_sigm_train-tag-epoch_loss.csv  run-tf_withAssist_8tanh_8tanh_sigm_train-tag-epoch_loss.csv  run-tf_withIsectSymdiff_2qsig_0_sigm_train-tag-epoch_loss.csv  (+26 more)
dmppl/experiments/treebalance/: .gitignore  Makefile  batch_treebalance.py  glossary.tex  results.txt  results.yml  setup.tex  treebalance.py  treebalance.tex
dmppl/scripts/: beamer_times.py  bindump.py  bytePipe_utils.py  lineFilter.py  parvec.py  plotCsv.py  plotDistBytes.py  plotX.py  svg2png.py  vcd_utils.py
tests/: .coveragerc_2.7  .coveragerc_3.5  .coveragerc_3.6  .coveragerc_3.7  __init__.py  golden_Xoroshiro128plus_Basic0  test_base.py  test_beamer_times.py  test_color.py  test_eva_common.py  test_eva_init.py  test_fx.py  test_identicon.py  test_math.py  test_nd.py  test_parvec.py  test_prng.py  test_stats.py  test_toml.py  test_vcd.py  test_vcd_utils.py  test_yaml.py
(+10 files in other folders)
